--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "cam-proto",
   "version": "0.1.0",
   "private": true,
+  "description": "Mobile Collection Agent - technical POC",
+  "author": "Li Lin",
+  "license": "UNLICENSED",
   "devDependencies": {
-    "react-native-scripts": "1.0.0",
+    "eslint": "^4.3.0",
+    "eslint-config-react-native": "^1.6.0",
+    "eslint-config-react-native-prettier": "^1.0.1",
+    "husky": "^0.14.3",
     "jest-expo": "~19.0.0",
+    "lint-staged": "^4.0.2",
+    "prettier": "^1.5.3",
+    "react-native-scripts": "^1.1.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "./crna-entry.js",
   "scripts": {
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
@@ -22,6 +31,8 @@
     "expo": "^19.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
+    "react-native-communications": "^2.2.1",
+    "react-native-elements": "^0.15.0",
     "react-navigation": "^1.0.0-beta.12"
   }
 }
