--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint-config-react-native": "^1.6.0",
     "eslint-config-react-native-prettier": "^1.0.1",
     "husky": "^0.14.3",
-    "jest-expo": "~19.0.0",
+    "jest-expo": "~19.0.5",
     "lint-staged": "^4.0.2",
     "prettier": "^1.5.3",
     "react-native-scripts": "^1.1.0",
@@ -22,10 +22,15 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "cover": "node node_modules/jest/bin/jest.js --watchAll --coverage",
+    "precommit": "lint-staged"
   },
   "jest": {
     "preset": "jest-expo"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,json,scss}": ["prettier --single-quote --write", "git add"]
   },
   "dependencies": {
     "expo": "^19.0.0",
