--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "^0.46.1",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^0.15.0",
+    "react-native-settings-list": "^1.6.1",
     "react-navigation": "^1.0.0-beta.12"
   }
 }
