--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint-config-react-native": "^1.6.0",
     "eslint-config-react-native-prettier": "^1.0.1",
     "husky": "^0.14.3",
-    "jest-expo": "~19.0.5",
+    "jest-expo": "~20.0.0",
     "lint-staged": "^4.0.2",
     "prettier": "^1.5.3",
     "react-native-scripts": "^1.1.0",
@@ -33,9 +33,9 @@
     "**/*.{js,jsx,json,scss}": ["prettier --single-quote --write", "git add"]
   },
   "dependencies": {
-    "expo": "^19.0.0",
+    "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^0.15.0",
     "react-native-loading-spinner-overlay": "^0.5.1",
