disable prettier warning (in VSCode). We'll run prettier when commit

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
-  "extends": [
-    "react-native-prettier"
-  ]
+  "extends": ["react-native-prettier"],
+  "rules": {
+    "prettier/prettier": "off"
+  }
 }
