--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "react-native-elements": "^0.15.0",
     "react-native-loading-spinner-overlay": "^0.5.1",
     "react-native-settings-list": "^1.6.1",
-    "react-navigation": "^1.0.0-beta.12"
+    "react-navigation": "^1.0.0-beta.12",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
