--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-persist": "^4.9.1",
     "redux-thunk": "^2.2.0"
   }
 }
