--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "eslint-config-react-native": "^1.6.0",
     "eslint-config-react-native-prettier": "^1.0.1",
     "husky": "^0.14.3",
-    "jest-expo": "~21.0.0",
+    "jest-expo": "~22.0.0",
     "lint-staged": "^4.0.2",
     "prettier": "^1.5.3",
     "react-native-debugger-open": "^0.3.12",
-    "react-native-scripts": "^1.1.0",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-native-scripts": "^1.7.0",
+    "react-test-renderer": "16.0.0-beta.5"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -35,13 +35,14 @@
     "**/*.{js,jsx,json,scss}": ["prettier --single-quote --write", "git add"]
   },
   "dependencies": {
-    "expo": "^21.0.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz",
+    "expo": "^22.0.0",
+    "react": "16.0.0-beta.5",
+    "react-native":
+      "https://github.com/expo/react-native/archive/sdk-22.0.2.tar.gz",
     "react-native-communications": "^2.2.1",
-    "react-native-elements": "^0.15.0",
-    "react-native-settings-list": "^1.6.1",
-    "react-navigation": "^1.0.0-beta.12",
+    "react-native-elements": "^0.18.0",
+    "react-native-settings-list": "^1.8.0",
+    "react-navigation": "^1.0.0-beta.17",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
